Add gc logs.